[package]
authors = ["The Nushell Project Developers"]
description = "Nushell's built-in commands"
edition = "2021"
license = "MIT"
name = "nu-command"
version = "0.61.0"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-color-config = { version = "0.61.0"  }
nu-engine = { version = "0.61.0"  }
nu-glob = { version = "0.61.0" }
nu-json = { version = "0.61.0"  }
nu-parser = { version = "0.61.0"  }
nu-path = { version = "0.61.0"  }
nu-pretty-hex = { version = "0.61.0"  }
nu-protocol = { version = "0.61.0"  }
nu-system = { version = "0.61.0"  }
nu-table = { version = "0.61.0"  }
nu-term-grid = { version = "0.61.0"  }
nu-test-support = { version = "0.61.0"  }
nu-utils = { version = "0.61.0" }
nu-ansi-term = "0.45.1"
#rusqlite = { version = "0.27.0", features = ["bundled"] }

# Potential dependencies for extras
chrono = { version = "0.4.19", features = ["serde"] }
chrono-humanize = "0.2.1"
chrono-tz = "0.6.1"
crossterm = "0.23.0"
# used by filesystem/util
dialoguer = "0.9.0"
# used by date/utils
dtparse = "1.2.0"
# used by ls
filesize = "0.2.0"
indexmap = { version="1.7", features=["serde-1"] }
itertools = "0.10.0"
#lazy_static = "1.4.0"
log = "0.4.14"
lscolors = { version = "0.9.0", features = ["crossterm"]}
# used by ls
pathdiff = "0.2.1"
rand = "0.8"
regex = "1.5.4"
serde = { version="1.0.123", features=["derive"] }
shadow-rs = "0.11.0"
# used by table viewer
terminal_size = "0.1.17"
# used by date/parser.rs
titlecase = "1.1.0"
reedline =  { version = "0.4.0", features = ["bashisms"]}

[target.'cfg(unix)'.dependencies]
umask = "1.0.0"
users = "0.11.0"

[features]
plugin = ["nu-parser/plugin"]
dataframe = []

[build-dependencies]
shadow-rs = "0.11.0"
